--- a/partials/header.ejs
+++ b/partials/header.ejs
@@ -1,3 +1,3 @@
 <header>
-    <img src="http://placekitten.com/500/500" alt="kitten">
+    <img src="https://live.staticflickr.com/27/94690517_c2f91be963.jpg" alt="">
 </header>
